[package]
name = "ocaml-interop"
version = "0.9.2" # remember to update html_root_url
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
license = "MIT"
description = "Utilities for Rust and OCaml interoperability"
homepage = "https://github.com/tizoc/ocaml-interop"
repository = "https://github.com/tizoc/ocaml-interop"
keywords = ["ocaml", "rust", "ffi", "interop"]
edition = "2018"
exclude = [
    ".github/*",
]
links = "asmrun,ocaml-boxroot"

[package.metadata.docs.rs]
features = [ "without-ocamlopt", "caml-state", "link" ]

[dependencies]
ocaml-sys = { git = "https://github.com/TheNumbat/ocaml-rs", branch = "ocaml5" }
ocaml-boxroot-sys = { git = "https://github.com/TheNumbat/ocaml-boxroot", branch = "ocaml5" }
static_assertions = "1.1.0"

[features]
without-ocamlopt = ["ocaml-sys/without-ocamlopt"]
caml-state = ["ocaml-sys/caml-state"]
no-caml-startup = []
link = ["ocaml-sys/link"]
